syntax = "proto3";

package proxy_proto;

import "GetAllMovie.proto";
import "CreateNewMovie.proto";
import "GetIndices.proto";
import "GetMovieByID.proto";
import "SearchMovie.proto";
import "UpdateMovieData.proto";
import "DeleteMovie.proto";

import "google/api/annotations.proto";
//import "google/protobuf/wrappers.proto";
//import "google/api/http.proto";

option go_package = "./;proto";

service Gateway {

  rpc GetAllMovie(GetAllMovieRequest) returns (GetAllMovieResponse){
    option (google.api.http) = {
      get: "/v1/api/movie/all"
    };
  }

  rpc CreateNewMovie(CreateNewMovieRequest) returns (CreateNewMovieResponse){
    option (google.api.http) = {
      post: "/v1/api/movie/create",
      body: "*"
    };
  }

  rpc GetIndices(GetIndicesRequest) returns (GetIndicesResponse){
    option (google.api.http) = {
      get: "/v1/api/movie/indices",
    };
  }

  rpc GetMovieByID(GetMovieByIDRequest) returns (GetMovieByIDResponse){
    option (google.api.http) = {
      get: "/v1/api/movie/get/{movie_id}",
    };
  }

  rpc SearchMovie(SearchMovieRequest) returns (SearchMovieResponse){
    option (google.api.http) = {
      post: "/v1/api/movie/search",
      body: "*"
    };
  }

  rpc UpdateMovieData(UpdateMovieDataRequest) returns (UpdateMovieDataResponse){
    option (google.api.http) = {
      patch: "/v1/api/movie/update",
      body: "*"
    };
  }

  rpc DeleteMovie(DeleteMovieRequest) returns (DeleteMovieResponse){
    option (google.api.http) = {
      delete: "/v1/api/movie/delete",
    };
  }

}
